CSS overflow fixed for IE

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -390,9 +390,14 @@ input[disabled='disabled'] {
 
 /* Tabular data view
 div#table-container { */
-   /*overflow: auto;*/
+div#table-container {
    display: block;
-   overflow: visible;
+   width: 100%;
+   /*overflow: visible;*/
+   overflow: auto;
+   /* Bring in line with export formats */
+   margin-top: -1px;
+   min-width: 640px;
 }
 div#table-container thead th {
 	text-align: left;
@@ -420,7 +425,6 @@ div#table-container td.totals_header {
     font-weight: bold;
 }
 
-
 #list_formats {
     float: left;
     margin-bottom: 10px;
@@ -431,12 +435,6 @@ div#table-container td.totals_header {
 }
 
 /* dataTables Styling */
-/* Bring in line with export formats */
-#table-container {
-    margin-top: -1px;
-    min-width: 640px;
-    /* min-width: 700px; */
-}
 table.dataTable {
     /* min-width: 700px; */
     width: 100%;
